--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.7",
     "axios": "^1.6.0",
+    "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.9.6",
     "react-scripts": "5.0.1"
   },
