--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-DATABASE_URL=postgresql://postgres:safia@localhost/ngodb
-JWT_SECRET_KEY=your-super-secret-jwt-key-change-in-production
+DATABASE_URL=postgresql://servia:password@localhost:5432/charitydb
+JWT_SECRET_KEY=your-super-secret-key
+PORT=5000
